[project]
name = "video-speed"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    "cairosvg>=2.8.2",
    "flask>=3.1.2",
    "flask-cors>=6.0.2",
    "gunicorn>=25.0.1",
    "librosa>=0.11.0",
    "lottie>=0.7.2",
    "numpy>=2.3.5",
    "opencv-python>=4.13.0.90",
    "pillow>=12.1.0",
    "rembg[cpu]>=2.0.72",
    "soundfile>=0.13.1",
    "werkzeug>=3.1.5",
]
